--- a/styles/LandingPage.module.css
+++ b/styles/LandingPage.module.css
@@ -145,4 +145,24 @@ footer .container {
     width: 100vw;
     height: auto;
   }
+
+  .loadingContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  width: 100%;
+  max-width: 100vw;
+  background: #0a0a0a;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2000;
+}
+
+.loadingAnimation {
+  width: 200px;
+  height: 200px;
+}
 }
