--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -544,4 +544,22 @@ footer {
   font-size: 1.8rem;
 }
 
+button,
+a,
+input,
+textarea,
+select {
+  outline: none !important;
+  box-shadow: none !important;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-focus-ring-color: transparent;
+}
+
+*:focus {
+  outline: none !important;
+  box-shadow: none !important;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-focus-ring-color: transparent;
+}
+
 }
