--- a/client/styles/Register.module.css
+++ b/client/styles/Register.module.css
@@ -34,7 +34,7 @@
 }
 
 .logo {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-weight: bold;
   color: #ffffff;
   text-decoration: none;
@@ -44,7 +44,7 @@
 }
 
 .logoImage {
-  height: 3rem;
+  height: 2rem !important;
   width: auto;
   display: block;
 }
