--- a/client/styles/About.module.css
+++ b/client/styles/About.module.css
@@ -81,13 +81,13 @@
 }
 
 .content a {
-  color: #8b0000;
+  color: #0000FF;
   text-decoration: none;
   transition: color 0.3s ease;
 }
 
 .content a:hover {
-  color: #a00000;
+  color: #0000CC;
   text-decoration: underline;
 }
 
