--- a/client/styles/LandingPage.module.css
+++ b/client/styles/LandingPage.module.css
@@ -12,8 +12,7 @@
   backdrop-filter: blur(5px);
 }
 
-
-  .loadingContainer {
+.loadingContainer {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -90,12 +89,12 @@
 
 .formGroup input:focus {
   outline: none;
-  border-color: #8b0000;
-  box-shadow: 0 0 5px rgba(139, 0, 0, 0.5);
+  border-color: #0000FF;
+  box-shadow: 0 0 5px rgba(0, 0, 255, 0.5);
 }
 
 .submitButton {
-  background: linear-gradient(135deg, #8b0000, #8b0000);
+  background: linear-gradient(135deg, #0000FF, #0000FF);
   color: white;
   padding: 0.8rem;
   border: none;
@@ -110,7 +109,7 @@
 
 .submitButton:hover {
   transform: translateY(-2px);
-  box-shadow: 0 6px 20px rgba(139, 0, 0, 0.4);
+  box-shadow: 0 6px 20px rgba(0, 0, 255, 0.4);
 }
 
 .footer-section.company-section {
@@ -161,5 +160,4 @@ footer .container {
     width: 100vw;
     height: auto;
   }
-
 }
